-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.1.1, Qt Creator 3.2.0-beta1
-
None
-
06e2c3309efffe3a1866134f6b1db65ffd907370
Doesn't happen for the first lambda, and doesn't happen if the return type is a class.
void foo()
{
func([]() -> int { return 42; }); // correct
func([]() -> int { return 42; }); // duplicate data type in declaration
func([]() -> int { return 42; }); // duplicate data type in declaration
}
- replaces
-
QTCREATORBUG-8773 Lambda return type highlighting
-
- Closed
-
-
QTCREATORBUG-10326 'duplicate data type in declaration' when using trailing return types in a list of lambdas
-
- Closed
-
-
QTCREATORBUG-12582 Wrong parse error with Lambda
-
- Closed
-
-
QTCREATORBUG-10537 declare int as lambda result type will generate error red line
-
- Closed
-
-
QTCREATORBUG-8089 C++11 Syntax error on second lambda with same return type using new function declarator syntax
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-12521 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 88389,3 | C++: Fix "duplicate data type in declaration" for lambdas | 3.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |